--- a/package/package.json
+++ b/package/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "govuk-frontend",
+  "name": "@penx/govuk-frontend",
   "description": "GOV.UK Frontend contains the code you need to start building a user interface for government platforms and services.",
-  "version": "2.3.0",
+  "version": "0.0.1",
   "main": "all.js",
   "sass": "all.scss",
   "engines": {
